--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,13 +13,15 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
   
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
     }
-  }
+  
     .custom-button.google-sign-in {
       background-color: #4286f4;
       color: white;
@@ -29,5 +31,18 @@
         border: none;
       }
     }
+
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover {
+        background-color: black;
+        color: white;
+        border: none;
+      }
+
+    }
   
-  
+  }
